# easycaption

./: .gitignore  Cargo.toml  README.md  pnpm-lock.yaml
backend/: Cargo.toml  tauri.conf.json
backend/src/: cmds.rs  config.rs  download.rs  main.rs  notify.rs  server.rs  transpose.rs
enthalpy/: Cargo.toml
enthalpy/examples/: audio_input.rs  sensevoicesmall.rs
enthalpy/src/: lib.rs  var_builder.rs
enthalpy/src/audio/: input.rs  mod.rs  resample.rs  silero_vad.rs  wav_frontend.rs
enthalpy/src/sense_voice_small/: mod.rs
enthalpy/src/sense_voice_small/decoder/: ctc.rs  mod.rs
enthalpy/src/sense_voice_small/encoder/: encoder.rs  layer_sanm.rs  mha_sanm.rs  mod.rs  positionwise_feed.rs  sinusoidal.rs
enthalpy/src/util/: modelscope.rs
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: api.ts  mock_api.ts  tauri_api.ts
frontend/src/cmds/: index.ts  types.ts
frontend/src/pages/: Layout.tsx  TransposeSetting.tsx  caption.tsx  setting.tsx
frontend/src/pages/components/: FileStatusItem.tsx  Notification.tsx  NumberInput.tsx  SectionCard.tsx  SelectInput.tsx  SettingItem.tsx  TextInput.tsx  ToggleSwitch.tsx
src/: App.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: common.rs  config.rs  main.rs  server.rs
src-tauri/src/audio/: audio.rs
src-tauri/src/test/: audio.rs  record_wav.rs  sync_tones.rs
src/pages/: caption.tsx  setting.tsx
whisperlivekit/: Dockerfile
