[package]
name = "backend"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable", "macos-private-api", "devtools"] }
tauri-plugin-opener = "2"
tokio = { version = "^1.40", features = ["rt-multi-thread", "macros", "fs", "time"] }
enthalpy = { path = "../enthalpy", version = "0.1.0" }
serde = "1.0.219"
serde_json = "1.0.143"
json-patch = "4.0.0"
tracing = "^0.1"
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }
chrono = "^0.4"
anyhow = "^1.0"
