[package]
name = "easycaption"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable","macos-private-api","devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "^1"
tokio = { version = "^1.40", features = ["rt-multi-thread", "macros", "fs"] }
tokio-tungstenite = "*"
futures-util = "0.3"
cpal = "0.16.0"
clap = { version = "^4", features = ["derive"] }
anyhow = "^1"
hound = "^3"